Update section headings in LeetCode notes for clarity, changing "代码实现" to "思路一:代码实现" for Python and "思路二:代码实现" for Go.

--- a/leetcode/Study Plan/717. 1 比特与 2 比特字符/2025-11-18-LeetCode刷题笔记-题目序号-题目.md
+++ b/leetcode/Study Plan/717. 1 比特与 2 比特字符/2025-11-18-LeetCode刷题笔记-题目序号-题目.md
@@ -37,7 +37,7 @@ tags:
 
 ---
 
-## 代码实现（Python）
+## 思路一:代码实现（Python）
 
 ```python
 from typing import List
@@ -50,7 +50,7 @@ class Solution:
         return i == n - 1
 ```
 
-## 代码实现（Go）
+## 思路二:代码实现（Go）
 
 ```go
 func isOneBitCharacter(bits []int) bool {
